--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,104 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript", "prettier"]
+  // 0 = off, 1 = warn, 2 = error
+  "extends": [
+    "next/core-web-vitals",
+    "next/typescript",
+    "prettier",
+    "plugin:tailwindcss/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "rules": {
+    // for 루프에서 ++/--와 같은 단항 연산자를 최종 표현식으로 사용하는 것을 허용합니다. 0이면 이 규칙을 무시합니다.
+    "allowForLoopAfterthoughts": 0,
+
+    // console.log가 코드에 남아 있을 때 경고로 표시됩니다. 오류를 발생시키지 않음.
+    "no-console": 1,
+
+    // 사용되지 않는 변수가 있을 경우 경고로 표시합니다. 오류를 발생시키지 않음.
+    "no-unused-vars": 1,
+
+    // TypeScript에서 사용되지 않는 변수가 있을 경우 경고로 표시합니다. 오류를 발생시키지 않음.
+    "@typescript-eslint/no-unused-vars": 1,
+
+    // props로 받은 값을 바로 spread 문법으로 넘기는 것을 허용합니다. 이 규칙을 무시합니다.
+    "react/jsx-props-no-spreading": 0,
+
+    // Prettier의 줄 끝(end-of-line) 설정을 자동으로 맞추고, 이 규칙을 위반하면 오류로 표시합니다.
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
+
+    // 화살표 함수의 본문에 항상 중괄호를 사용해야 합니다. 이를 어기면 오류로 표시합니다.
+    "arrow-body-style": [2, "always"],
+
+    // 콜백 함수에서 화살표 함수를 권장하는 규칙을 무시합니다.
+    "prefer-arrow-callback": 0,
+
+    // import 또는 require 구문에서 모듈을 찾을 수 없을 때 발생하는 오류를 무시합니다.
+    "import/no-unresolved": 0,
+
+    // 테스트 또는 개발 환경을 구성하는 파일에서 devDependency 사용을 허용합니다.
+    "import/no-extraneous-dependencies": 0,
+
+    // 기본(default) export를 권장하는 규칙을 무시합니다.
+    "import/prefer-default-export": 0,
+
+    // label을 사용할 때, htmlFor 속성을 사용하여 접근성을 유지하도록 합니다. 이를 어기면 오류로 표시합니다.
+    "jsx-a11y/label-has-associated-control": [
+      2,
+      {
+        "labelAttributes": ["htmlFor"]
+      }
+    ],
+
+    // 파일 확장자명을 사용할 때, js, jsx, ts, tsx, json 파일은 확장자 표기를 생략해야 하며, 이를 어기면 오류로 표시합니다.
+    "import/extensions": [
+      2,
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never",
+        "json": "never"
+      }
+    ],
+
+    // onClick 이벤트를 사용할 때, onKeyUp, onKeyDown, onKeyPress 이벤트 중 하나 이상을 함께 사용하는 규칙을 무시합니다.
+    "jsx-a11y/click-events-have-key-events": 0,
+
+    // 상태가 없는 컴포넌트를 무조건 함수형 컴포넌트로 정의해야 한다는 규칙을 무시합니다.
+    "react/prefer-stateless-function": 0,
+
+    // .jsx 파일이 아닌 다른 확장자에서도 JSX 문법을 사용할 수 있도록 허용합니다.
+    "react/jsx-filename-extension": 0,
+
+    // JSX에서 한 줄에 하나의 표현식을 사용하도록 하는 규칙을 무시합니다.
+    "react/jsx-one-expression-per-line": 0,
+
+    // 중첩된 삼항 연산자를 허용합니다.
+    "no-nested-ternary": 0,
+
+    // JSX를 사용하기 위해 React를 항상 scope에 포함해야 한다는 규칙을 무시합니다.
+    "react/react-in-jsx-scope": 0,
+
+    // 모든 함수형 컴포넌트를 화살표 함수로 정의해야 합니다. 이를 어기면 오류로 표시합니다.
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+
+    // 정의되지 않은 변수를 사용했을 때 오류를 무시합니다.
+    "no-undef": "off",
+
+    // 주석에 공백을 넣어야 한다는 규칙을 무시합니다.
+    "spaced-comment": "off",
+
+    // Tailwind CSS 클래스 이름을 정렬하는 규칙을 무시합니다.
+    "tailwindcss/classnames-order": 0,
+
+    // Tailwind CSS 클래스명 외에 사용자 정의 클래스를 사용하는 규칙을 무시합니다.
+    "tailwindcss/no-custom-classnames": 0
+  }
 }
