--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-tailwindcss": "3.17.5",
     "husky": "9.1.6",
     "postcss": "^8",
     "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
