--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "dependencies": {
     "env-cmd": "10.1.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "zustand": "5.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
