--- a/package.json
+++ b/package.json
@@ -4,12 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build:local": "env-cmd -f ./env/.env.local next build",
-    "build:dev": "env-cmd -f ./env/.env.dev next build",
-    "build:prod": "next build",
-    "start:local": "env-cmd -f .env/.env.local next dev",
-    "start:dev": "env-cmd -f ./env/.env.dev next dev",
-    "start:prod": "env-cmd -f ./env/.env.prod next start",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky"
@@ -18,7 +13,6 @@
     "@tanstack/react-query": "5.61.0",
     "@tanstack/react-query-devtools": "5.61.0",
     "axios": "1.7.7",
-    "env-cmd": "10.1.0",
     "next": "15.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
