📦 Chore: install next svgr, add logo, social login svgr

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-conventional": "19.5.0",
+    "@svgr/webpack": "8.1.0",
     "@tanstack/eslint-plugin-query": "5.60.1",
     "@types/node": "^20",
     "@types/react": "^18",
