--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@tanstack/react-query": "5.61.0",
     "@tanstack/react-query-devtools": "5.61.0",
     "axios": "1.7.7",
+    "js-base64": "3.7.7",
     "next": "15.0.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "zustand": "5.0.1"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
