--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "js-base64": "3.7.7",
     "next": "15.0.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "recoil": "0.7.7"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
