--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,6 +62,8 @@
       }
     ],
 
+    "react-hooks/exhaustive-deps": 0,
+
     // onClick 이벤트를 사용할 때, onKeyUp, onKeyDown, onKeyPress 이벤트 중 하나 이상을 함께 사용하는 규칙을 무시합니다.
     "jsx-a11y/click-events-have-key-events": 0,
 
