--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "3.9.1",
     "@tanstack/react-query": "5.61.0",
     "@tanstack/react-query-devtools": "5.61.0",
     "axios": "1.7.7",
@@ -17,7 +18,9 @@
     "next": "15.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "recoil": "0.7.7"
+    "react-hook-form": "7.53.2",
+    "recoil": "0.7.7",
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
