--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.2",
+    "react-kakao-maps-sdk": "1.1.27",
     "yup": "1.4.0"
   },
   "devDependencies": {
